Các khóa học lập trình
Chưa song

--- a/Projekt cac khoa hoc lap trinh/khoahoc.html
+++ b/Projekt cac khoa hoc lap trinh/khoahoc.html
@@ -192,11 +192,11 @@
 		<br>	
 		<br>	
 
-		<div class="row">
+		<div class="row hieuung">
 			<div class="col-xs-6 col-md-3 ">
 				<a href="c++.html">
 					<div class="maunenk">						
-						<img src="img/CPP.jpg" alt="anh1" title="anh1" class="img-responsive"/>									
+						<img src="img/CPP.jpg" alt="anh1" title="anh1" width="360" height="250" class="img-responsive"/>									
 						<div class="khung"> 		
 				            <h3 class="khoahoc">C++ cơ bản qua ví dụ thực tế</h3>
 				            <h4 class="doanvan gia">600,000đ</h4>            		        	 
@@ -208,7 +208,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="machinelerning.html">
 					<div class="maunenk">					
-						<img src="img/MachineLearning.jpg" alt="anh2" title="anh2" class="img-responsive"/>
+						<img src="img/MachineLearning.jpg" alt="anh2" title="anh2" width="360" height="250" class="img-responsive"/>
 						</a>
 						<div class="khung"> 				
 				            <h3 class="khoahoc">Nhập môn Machine Learning</h3>
@@ -221,7 +221,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="magento.html">
 					<div class="maunenk">						
-						<img src="img/MagentoLogo.jpg" alt="anh3" title="anh3" class="img-responsive"/>						
+						<img src="img/MagentoLogo.jpg" alt="anh3" title="anh3" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 
 							<h3 class="khoahoc">Xây dựng webiste bán hàng với Magento 2</h3>
 				            <h4 class="doanvan gia">800,000đ</h4>			        
@@ -233,7 +233,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="php.html">
 					<div class="maunenk">						
-						<img src="img/php7.jpg" alt="anh4" title="anh4" class="img-responsive"/>						
+						<img src="img/php7.jpg" alt="anh4" title="anh4" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 			
 						    <h3 class="khoahoc">Lập trình PHP qua các dự án thực tế</h3>
 				            <h4 class="doanvan gia">700,000đ</h4>       
@@ -244,11 +244,11 @@
 		</div>
 		<br>
 
-		<div class="row">
+		<div class="row hieuung">
 			<div class="col-xs-6 col-md-3 ">
 				<a href="python.html">
 					<div class="maunenk">						
-						<img src="img/python_course.jpg" alt="anh5" title="anh5" class="img-responsive"/>						
+						<img src="img/python_course.jpg" alt="anh5" title="anh5" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 		
 				            <h3 class="khoahoc">Lập trình Python ứng dụng thực tế</h3>
 				            <h4 class="doanvan gia">1,000,000đ</h4>	           		          	 
@@ -260,7 +260,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="rail5.html">
 					<div class="maunenk">						
-						<img src="img/Rails5Logo.jpg" alt="anh6" title="anh6" class="img-responsive"/>						
+						<img src="img/Rails5Logo.jpg" alt="anh6" title="anh6" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 				
 				            <h3 class="khoahoc">Ruby on Rails 5 qua các dự án</h3>
 				            <h4 class="doanvan gia">2,500,000đ</h4>  			          
@@ -272,7 +272,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="restful.html">
 					<div class="maunenk">						
-						<img src="img/resteasy_logo_600x2.jpg" alt="anh7" title="anh7" class="img-responsive"/>				
+						<img src="img/resteasy_logo_600x2.jpg" alt="anh7" title="anh7" width="360" height="250" class="img-responsive"/>				
 						<div class="khung"> 
 							<h3 class="khoahoc">Thiết kế RESTful WebServices</h3>
 				            <h4 class="doanvan gia">1,000,000đ</h4>				         
@@ -295,11 +295,11 @@
 	    </div>	
 	    <br>
 
-    	<div class="row">
+    	<div class="row hieuung">
 	        <div class="col-xs-6 col-md-3 ">
 	        	<a href="websitebuilder.html">
 					<div class="maunenk">						
-						<img src="img/Website-Builders4.jpg" alt="anh9" title="anh9" class="img-responsive"/>					
+						<img src="img/Website-Builders4.jpg" alt="anh9" title="anh9" width="360" height="250" class="img-responsive"/>					
 						<div class="khung"> 
 							<h3 class="khoahoc">Xây dựng website với Arrow Js CMS</h3>
 				            <h4 class="doanvan gia">800,000đ</h4>	         
@@ -311,7 +311,7 @@
 	        <div class="col-xs-6 col-md-3 ">
 	        	<a href="electronic.html">
 					<div class="maunenk">						
-						<img src="img/Electronics2.jpg" alt="anh10" title="anh10" class="img-responsive"/>						
+						<img src="img/Electronics2.jpg" alt="anh10" title="anh10" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 
 							<h3 class="khoahoc">Điện tử thực hành cho dân điện tử</h3>
 				            <h4 class="doanvan gia">3,600,000đ</h4>	         
@@ -323,7 +323,7 @@
 	        <div class="col-xs-6 col-md-3 ">
 	        	<a href="nodejs.html">
 					<div class="maunenk">
-						<img src="img/nodejs2.jpg" alt="anh11" title="anh11" class="img-responsive"/>					
+						<img src="img/nodejs2.jpg" alt="anh11" title="anh11" width="360" height="250" class="img-responsive"/>					
 						<div class="khung"> 
 							<h3 class="khoahoc">Node.js xây dựng website tốc độ cao</h3>
 				            <h4 class="doanvan gia">1,500,000đ</h4>	         
@@ -335,7 +335,7 @@
 	        <div class="col-xs-6 col-md-3 ">
 	        	<a href="java.html">
 					<div class="maunenk">						
-						<img src="img/JavaThucHanh2.jpg" alt="anh12" title="anh12" class="img-responsive"/>						
+						<img src="img/JavaThucHanh2.jpg" alt="anh12" title="anh12" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 
 							<h3 class="khoahoc">Java căn bản kết hợp thực hành</h3>
 				            <h4 class="doanvan gia">4,000,000đ</h4>	         
@@ -376,7 +376,7 @@
 		<div class="wrap maunenchan">
 			<div class="row">
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Về chúng tôi</h3></li>
 						<li>Việc làm</li>
 						<li>Giảng viên</li>
@@ -384,7 +384,7 @@
 					</ul>
 				</div>	
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Liên hệ</h3></li>
 						<li>Mr Cường: 090.220.9011</li>
 						<li>Mr Nghĩa: 096.440.7993</li>
@@ -392,7 +392,7 @@
 					</ul>
 				</div>
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Địa chỉ</h3></li>
 						<li>Số 14, ngõ 4, Nguyễn Đình Chiểu, Hà Nội</li>
 						<li>Mở cửa: 9:00 đến 18:00</li>
