--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -126,10 +126,7 @@
 			</div>
 		</div>
 
-		<div>
-			<p>
-			</p>
-		</div>
+		<br>
 
 		<div id="banner">
         	<img src="img/banner_1.jpg" alt="banner" title="banner" class="img-responsive"/>  
@@ -143,16 +140,13 @@
 			</div>				
 		</div>
 
-		<div>
-			<p>
-			</p>
-		</div>
+		<br>		
 
 		<div class="row">
-			<div class="col-xs-6 col-md-3 ">
+			<div class="col-xs-6 col-md-3 hieuung zoom-effect-container">
 				<a href="c++.html">
 					<div class="maunen">						
-						<img src="img/CPP.jpg" alt="anh1" title="anh1" class="img-responsive"/>									
+						<img src="img/CPP.jpg" alt="anh1" title="anh1" width="360" height="250" class="img-responsive"/>									
 						<div class="khung"> 		
 				            <h3 class="khoahoc">C++ cơ bản qua ví dụ thực tế</h3>
 				            <h4 class="doanvan gia">600,000đ</h4>
@@ -169,7 +163,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="marchinelerning.html">
 					<div class="maunen">
-						<img src="img/MachineLearning.jpg" alt="anh2" title="anh2" class="img-responsive"/>					
+						<img src="img/MachineLearning.jpg" alt="anh2" title="anh2" width="360" height="250" class="img-responsive"/>					
 						<div class="khung"> 				
 				            <h3 class="khoahoc">Nhập môn Machine Learning</h3>
 				            <h4 class="doanvan gia">800,000đ</h4>     
@@ -184,7 +178,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="magento.html">
 					<div class="maunen">
-						<img src="img/MagentoLogo.jpg" alt="anh3" title="anh3" class="img-responsive"/>						
+						<img src="img/MagentoLogo.jpg" alt="anh3" title="anh3" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 
 							<h3 class="khoahoc">Xây dựng webiste bán hàng với Magento 2</h3>
 				            <h4 class="doanvan gia">800,000đ</h4>	        
@@ -199,7 +193,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="php.html">
 					<div class="maunen">						
-						<img src="img/php7.jpg" alt="anh4" title="anh4" class="img-responsive"/>						
+						<img src="img/php7.jpg" alt="anh4" title="anh4" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 			
 						    <h3 class="khoahoc">Lập trình PHP qua các dự án thực tế</h3>
 				            <h4 class="doanvan gia">700,000đ</h4>	        
@@ -213,11 +207,11 @@
 		</div>
 		<br>
 
-		<div class="row">
+		<div class="row hieuung">
 			<div class="col-xs-6 col-md-3 ">
 				<a href="python.html">
 					<div class="maunen">
-						<img src="img/python_course.jpg" alt="anh5" title="anh5" class="img-responsive"/>								
+						<img src="img/python_course.jpg" alt="anh5" title="anh5" width="360" height="250" class="img-responsive"/>								
 						<div class="khung"> 		
 				            <h3 class="khoahoc">Lập trình Python ứng dụng thực tế</h3>
 				            <h4 class="doanvan gia">1,000,000đ</h4>		               
@@ -232,7 +226,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="rail5.html">
 					<div class="maunen">
-						<img src="img/Rails5Logo.jpg" alt="anh6" title="anh6" class="img-responsive"/>						
+						<img src="img/Rails5Logo.jpg" alt="anh6" title="anh6" width="360" height="250" class="img-responsive"/>						
 						<div class="khung"> 				
 				            <h3 class="khoahoc">Ruby on Rails 5 qua các dự án</h3>
 				            <h4 class="doanvan gia">2,500,000đ</h4>     
@@ -247,7 +241,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="restful.html">
 					<div class="maunen">
-						<img src="img/resteasy_logo_600x2.jpg" alt="anh7" title="anh7" class="img-responsive"/>				
+						<img src="img/resteasy_logo_600x2.jpg" alt="anh7" title="anh7" width="360" height="250" class="img-responsive"/>				
 						<div class="khung"> 
 							<h3 class="khoahoc">Thiết kế RESTful WebServices</h3>
 				            <h4 class="doanvan gia">1,000,000đ</h4>	        
@@ -262,7 +256,7 @@
 			<div class="col-xs-6 col-md-3 ">
 				<a href="swift.html">
 					<div class="maunen">
-						<img src="img/Swift.jpg" alt="anh8" title="anh8" width="360" height="250"class="img-responsive"/>
+						<img src="img/Swift.jpg" alt="anh8" title="anh8" width="360" height="250" class="img-responsive"/>
 						<div class="khung"> 			
 						    <h3 class="khoahoc">Lập trình IOS Swift với toàn bộ mã nguồn</h3>
 				            <h4 class="doanvan gia">1,800,000đ</h4>	        
@@ -275,13 +269,26 @@
 	        </div>
 		</div>		
 		<br>
+		<div style="text-align:center;">		
+			<div class="tho">				
+			<p><h4 class="giandong">
+				Đi học ở Techmaster<br>
+				Chỉ sau sáu tháng chẳng nhờ vả ai<br>
+				Có công việc làm dài dài<br>
+				Cùng nhau học nhé chớ hoài thời gian<br>				
+			</h4></p>		
+		</div>	
+		</div>
+	
 	</section>
-
+		
 	<footer class="container">
+
+		<br>
 		<div class="wrap maunenchan">
 			<div class="row">
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Về chúng tôi</h3></li>
 						<li>Việc làm</li>
 						<li>Giảng viên</li>
@@ -289,7 +296,7 @@
 					</ul>
 				</div>	
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Liên hệ</h3></li>
 						<li>Mr Cường: 090.220.9011</li>
 						<li>Mr Nghĩa: 096.440.7993</li>
@@ -297,7 +304,7 @@
 					</ul>
 				</div>
 				<div class="col-xs-4 col-md-4 ">
-					<ul>
+					<ul class="lienhe">
 						<li><h3>Địa chỉ</h3></li>
 						<li>Số 14, ngõ 4, Nguyễn Đình Chiểu, Hà Nội</li>
 						<li>Mở cửa: 9:00 đến 18:00</li>
