Projekt lập trình
Chưa xong

--- a/Projekt cac khoa hoc lap trinh/bangxephang.html
+++ b/Projekt cac khoa hoc lap trinh/bangxephang.html
@@ -48,7 +48,9 @@
 							    <label for="Telephone">Số điện thoại</label>
 							    <input type="Telephone" class="form-control" id="Telephone" placeholder="Telephone">
 							  </div>
-							  <button type="signup" class="btn btn-default">Đăng ký</button>
+							  <div class="modal-footer">                  
+	                            <button type="button" class="btn btn-primary">Đăng ký</button>
+	                          </div>
 							</form>
 					      </div>
 					    </div>
@@ -86,9 +88,9 @@
 							  </div> 
 							  <br>
 							  <br>
-							  <div >						   
-							    <button type="signin" class="btn btn-default">Đăng nhập</button>
-							  </div>						  
+							  <div class="modal-footer">                  
+                              	<button type="button" class="btn btn-primary">Đăng ký</button>
+                              </div>						  
 							</form>
 					      </div>				      
 					    </div>
