--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -52,7 +52,11 @@
                                 <input type="Telephone" name="Telephone" class="form-control" id="Telephone" placeholder="Telephone">
                                 <span class="error"></span>
                               </div>
-                              <button type="signup" class="btn btn-default" value="Đăng ký">Đăng ký</button>
+                              <div>
+                                <div class="modal-footer">                  
+                                  <button type="button" class="btn btn-primary">Đăng ký</button>
+                                </div>
+                              </div>
                             </form>
                           </div>
                         </div>
@@ -90,8 +94,10 @@
                               </div> 
                               <br>
                               <br>
-                              <div >                           
-                                <button type="signin" class="btn btn-default">Đăng nhập</button>
+                              <div>
+                                <div class="modal-footer">                  
+                                  <button type="button" class="btn btn-primary">Đăng nhập</button>
+                                </div>
                               </div>                          
                             </form>
                           </div>                      
@@ -299,17 +305,17 @@
           <div class="thongtinc">     
             <div class="row ">
               <div class="col-md-4 baihocc ">
-                <h1 class="solieu">77</h1>
+                <h1 class="solieu"><b>77</h1>
                 <h3>Bài học</h3>
                 Luôn luôn phát triển, luôn cập nhật những công nghệ mới nhất.<br><br>
               </div>
               <div class="col-md-4 baihocc ">
-                <h1 class="solieu">66</h1>
+                <h1 class="solieu"><b>66</b></h1>
                 <h3>Videos</h3>
                 Đầy đủ thông tin, hài hước. Rất nhiều mẹo trong video sẽ hữu ích cho bạn trong quá trình lập trình.<br><br>
               </div> 
               <div class="col-md-4 baihocc ">   
-                <h1 class="solieu">207</h1>
+                <h1 class="solieu"><b>207</b></h1>
                 <h3>Quizzes</h3>
                 Câu hỏi trắc nghiệm giúp bạn ôn lại kiến thức vừa học.<br><br>           
               </div>
@@ -340,7 +346,7 @@
                 <hr noshade size = 4>
                 <p>
                   <h4>Barack Obama</h4>
-                  Mình bắt đầu lập trình Pascal từ năm 1993, với chiếc máy PC 2Mb RAM, 40Mb ổ cứng. Đến nay, đã hoàn thành gần 60 dự án phần mềm lớn nhỏ. Mình dạy lớp iOS, Node.js tại Techmaster. Ngoài ra mình còn làm cố vấn công nghệ cho các nhóm khởi nghiệp, kiêm quản lý dự án tại Techmaster. Mình bơi mỗi ngày 2000 mét <i style="color: white;">(có mặc quần bơi)</i>.<br>
+                  Mình bắt đầu lập trình Pascal từ năm 1993, với chiếc máy PC 2Mb RAM, 40Mb ổ cứng. Đến nay, đã hoàn thành gần 60 dự án phần mềm lớn nhỏ. Mình dạy lớp iOS, Node.js tại Techmaster. Ngoài ra mình còn làm cố vấn công nghệ cho các nhóm khởi nghiệp, kiêm quản lý dự án tại Techmaster. Mình bơi mỗi ngày 2000 mét <i style="color: black;"><b>(có mặc quần bơi)</b></i>.<br>
                 </p>
                 <br> 
                 <h3>Điều kiện đăng ký học</h3> 
