--- a/Projekt cac khoa hoc lap trinh/khoahoc.html
+++ b/Projekt cac khoa hoc lap trinh/khoahoc.html
@@ -49,7 +49,11 @@
 						    <label for="Telephone">Số điện thoại</label>
 						    <input type="Telephone" class="form-control" id="Telephone" placeholder="Telephone">
 						  </div>
-						  <button type="signup" class="btn btn-default">Đăng ký</button>
+						  <div>
+						  	<div class="modal-footer">					        
+					        	<button type="button" class="btn btn-primary">Đăng ký</button>
+					      	</div>
+						  </div>
 						</form>
 				      </div>
 				    </div>
@@ -87,8 +91,10 @@
 						  </div> 
 						  <br>
 						  <br>
-						  <div >						   
-						    <button type="signin" class="btn btn-default">Đăng nhập</button>
+						  <div>
+						  	<div class="modal-footer">					        
+					        	<button type="button" class="btn btn-primary">Đăng nhập</button>
+					      	</div>
 						  </div>						  
 						</form>
 				      </div>				      
