Bang phong than
Song

--- a/Projekt cac khoa hoc lap trinh/bangxephang.html
+++ b/Projekt cac khoa hoc lap trinh/bangxephang.html
@@ -133,29 +133,117 @@
 
 		<section class="container">
 			<br>
-			<!-- <div style="text-align: center;">
-				<div class="vs">
-					<div class="row">
-						<div class="col-xs-6 col-sm-4">
-							<img src="img/trinh-minh-cuong.jpg" alt="anhc" title="anhc" width="68" height="64" class="img-responsive"/>
+			<div class="panel panel-default">
+			  <!-- Default panel contents -->			  
+			 <div class="panel-heading"><h2 style="color:#7A0EF5;"><b>PHONG THẦN BẢNG</b></h2></div>
+			 <!-- Table -->
+			  <table class="table">
+			  	<TR class="tieudebang">
+					<TH class="TT">Thứ tự<br></TH>
+					<TH>Tên học viên<br></TH>
+					<TH width="50%" class="diemso">Điểm số<br></TH>
+					<TH class="XP">XP<br></TH>
+				</TR>
+				<TR>
+					<TD class="TT">1</TD>
+					<TD>Trình Mạnh Cương</TD>									
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+						    60%
+						  </div>
 						</div>
-						
-						<div class="col-xs-6 col-sm-4">	
-							<img src="img/vs.png" alt="anhvs" title="anhvs" width="68" height="64" class="img-responsive"/>
-						</div>	
-
-						<div class="col-xs-6 col-sm-4 anhtmt">	
-							<img src="img/logo.png" alt="anhtmt" title="anhtmt" width="272" height="256" class="img-responsive"/>
+					</TD>
+					<TD class="XP">
+						146/437
+					</TD>
+				</TR>
+				<TR>
+					<TD class="TT">2</TD>
+					<TD>Hilary Clinton</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;">
+						    54%
+						  </div>
 						</div>
-					</div>
-					<br>
-					<div>
-						<hr noshade size=10 color=red>
-					</div>
-				</div>
-			</div> -->	
-
-
+					</TD>
+					<TD class="XP">144/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">3</TD>
+					<TD>George Bush</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
+						    50%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">135/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">4</TD>
+					<TD>Donanld Trump</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%;">
+						    45%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">130/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">5</TD>
+					<TD>Bill Clinton</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%;">
+						    40%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">125/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">6</TD>
+					<TD>Tập Cận Bình</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">
+						    35%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">115/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">7</TD>
+					<TD>Angela Merkel</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%;">
+						    30%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">100/437</TD>
+				</TR>
+				<TR>
+					<TD class="TT">8</TD>
+					<TD>Đường Quang Hưng</TD>
+					<TD>
+						<div class="progress">
+						  <div class="progress-bar" role="progressbar" aria-valuenow="11" aria-valuemin="0" aria-valuemax="100" style="width: 11%;">
+						    11%
+						  </div>
+						</div>
+					</TD>
+					<TD class="XP">20/437</TD>
+				</TR>
+			  </table>
+			</div>
 		</section>
 
 
@@ -165,5 +253,28 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>	
+
+		<!-- <div style="text-align: center;">
+			<div class="vs">
+				<div class="row">
+					<div class="col-xs-6 col-sm-4">
+						<img src="img/trinh-minh-cuong.jpg" alt="anhc" title="anhc" width="68" height="64" class="img-responsive"/>
+					</div>
+					
+					<div class="col-xs-6 col-sm-4">	
+						<img src="img/vs.png" alt="anhvs" title="anhvs" width="68" height="64" class="img-responsive"/>
+					</div>	
+
+					<div class="col-xs-6 col-sm-4 anhtmt">	
+						<img src="img/logo.png" alt="anhtmt" title="anhtmt" width="272" height="256" class="img-responsive"/>
+					</div>
+				</div>
+				<br>
+				<div>
+					<hr noshade size=10 color=red>
+				</div>
+			</div>
+		</div> -->	
+
 	</body>
 </html>    
