--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -307,7 +307,7 @@
               <div class="col-md-4 baihocc ">
                 <h1 class="solieu"><b>77</h1>
                 <h3>Bài học</h3>
-                Luôn luôn phát triển, luôn cập nhật những công nghệ mới nhất.<br><br>
+                Luôn luôn phát triển và cập nhật những công nghệ mới nhất.<br><br>
               </div>
               <div class="col-md-4 baihocc ">
                 <h1 class="solieu"><b>66</b></h1>
@@ -317,7 +317,7 @@
               <div class="col-md-4 baihocc ">   
                 <h1 class="solieu"><b>207</b></h1>
                 <h3>Quizzes</h3>
-                Câu hỏi trắc nghiệm giúp bạn ôn lại kiến thức vừa học.<br><br>           
+                Câu hỏi trắc nghiệm giúp bạn ôn lại kiến thức.<br><br>           
               </div>
             </div>        
           </div>  
