--- a/Projekt cac khoa hoc lap trinh/bangxephang.html
+++ b/Projekt cac khoa hoc lap trinh/bangxephang.html
@@ -89,7 +89,7 @@
 							  <br>
 							  <br>
 							  <div class="modal-footer">                  
-                              	<button type="button" class="btn btn-primary">Đăng ký</button>
+                              	<a href="user.html"><button type="button" class="btn btn-primary">Đăng nhập</button></a>
                               </div>						  
 							</form>
 					      </div>				      
@@ -145,7 +145,7 @@
 					<TH class="XP">XP<br></TH>
 				</TR>
 				<TR>
-					<TD class="TT">1</TD>
+					<TD class="TT"><img src="img/vodich.jpg"></TD>
 					<TD>Trình Mạnh Cương</TD>									
 					<TD>
 						<div class="progress">
