--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -96,7 +96,7 @@
                               <br>
                               <div>
                                 <div class="modal-footer">                  
-                                  <button type="button" class="btn btn-primary">Đăng nhập</button>
+                                  <a href="user.html"><button type="button" class="btn btn-primary">Đăng nhập</button></a>
                                 </div>
                               </div>                          
                             </form>
@@ -756,5 +756,4 @@
                 
         
 
-    </body>
-</html>
+   
