--- a/Projekt cac khoa hoc lap trinh/codefree.html
+++ b/Projekt cac khoa hoc lap trinh/codefree.html
@@ -102,7 +102,7 @@
                               <div >                           
                                 <div>
                                   <div class="modal-footer">                  
-                                    <button type="button" class="btn btn-primary">Đăng nhập</button>
+                                    <a href="user.html"><button type="button" class="btn btn-primary">Đăng nhập</button></a>
                                   </div>
                                 </div>
                               </div>                          
