--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -91,7 +91,7 @@
 						  <br>
 						  <div>
 						  	<div class="modal-footer">					        
-					        	<button type="button" class="btn btn-primary">Đăng nhập</button>
+					        	<a href="user.html"><button type="button" class="btn btn-primary">Đăng nhập</button></a>
 					      	</div>
 						  </div>						  
 						</form>
