Projekt lập trình
Song

--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -144,7 +144,7 @@
             <div class="gioithieukhc"> 
                 <br>     
                 <div class="tenkhoahocc">
-                    <h2>C++ cơ bản qua các ví dụ</h2>   
+                    <h2><b>C++ cơ bản qua các ví dụ</b></h2>   
                 </div>
                 <br>
                 <div class="tomtatkhoahocc">
