--- a/Projekt cac khoa hoc lap trinh/user.html
+++ b/Projekt cac khoa hoc lap trinh/user.html
@@ -134,7 +134,11 @@
 				</div>	
 			</div>
 		</div>
-		<br>				     	
+		<br>
+		<div id="banner">
+        	<img src="img/banner_1.jpg" alt="banner" title="banner" class="img-responsive"/>  
+      	</div> 
+      	<br>				     	
     </header>
 
     <section class="container">
@@ -150,12 +154,88 @@
     		</div>
 
     		<div class="col-md-8">
+    			<form class="form-horizontal">    				
+	    			<div class="form-group">
+					    <label for="inputEmail3" class="col-sm-2 control-label">Ảnh đại diện</label>
+					    <div class="col-sm-10">
+						    <div class="row">
+						    	<div class="col-md-1">	
+						      		<img style="margin-right: 20px;"src="img/images.jpeg">
+						      	</div>	
+						      	<div class="col-md-11">
+						      		<div style="margin-left: 20px;">
+								      <button type="button" id="myButton" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
+										  Tải ảnh lên
+									  </button>
+									  <br>									  									  
+									  <div style="margin-top: 10px;">
+									  	Bạn có thể tải ảnh lên hoặc lấy ảnh trong thư viện nhưng xấu thì bạn phải chịu.
+									  </div>
+									</div>  
+								</div>  	
+						    </div>
+						</div>   
+				  	</div>
 
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Họ và Tên</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Name">
+				    </div>
+				  </div>	
 
+				  <div class="form-group">
+				    <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+				    <div class="col-sm-10">
+				      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Mật khẩu</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Số điện thoại</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Telephone">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Địa chỉ</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Adress">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Ngân hàng</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Bank">
+				    </div>
+				  </div>
+
+				  <div class="form-group">
+				    <label for="inputPassword3" class="col-sm-2 control-label">Tài khoản</label>
+				    <div class="col-sm-10">
+				      <input type="password" class="form-control" id="inputPassword3" placeholder="Accout">
+				    </div>
+				  </div>
+
+				  <div style="float: right;">				  	
+					<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Edit</button>					
+					<button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Save</button>
+				  </div>				  
+				</form>			
     		</div>
-
-
     	</div>
+    	<br>
+    	<br>
+    	<br>
     </section>
 
 
