--- a/Projekt cac khoa hoc lap trinh/bangxephang.html
+++ b/Projekt cac khoa hoc lap trinh/bangxephang.html
@@ -146,7 +146,7 @@
 				</TR>
 				<TR>
 					<TD class="TT"><img src="img/vodich.jpg"></TD>
-					<TD>Trình Mạnh Cương</TD>									
+					<TD><b>Trình Mạnh Cương</b></TD>									
 					<TD>
 						<div class="progress">
 						  <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
@@ -160,7 +160,7 @@
 				</TR>
 				<TR>
 					<TD class="TT">2</TD>
-					<TD>Hilary Clinton</TD>
+					<TD>Đường Quang Hưng</TD>
 					<TD>
 						<div class="progress">
 						  <div class="progress-bar" role="progressbar" aria-valuenow="54" aria-valuemin="0" aria-valuemax="100" style="width: 54%;">
@@ -172,7 +172,7 @@
 				</TR>
 				<TR>
 					<TD class="TT">3</TD>
-					<TD>George Bush</TD>
+					<TD>Tập Cận Bình</TD>
 					<TD>
 						<div class="progress">
 						  <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;">
@@ -208,7 +208,7 @@
 				</TR>
 				<TR>
 					<TD class="TT">6</TD>
-					<TD>Tập Cận Bình</TD>
+					<TD>George Bush</TD>
 					<TD>
 						<div class="progress">
 						  <div class="progress-bar" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%;">
@@ -232,7 +232,7 @@
 				</TR>
 				<TR>
 					<TD class="TT">8</TD>
-					<TD>Đường Quang Hưng</TD>
+					<TD>Hilary Clinton</TD>
 					<TD>
 						<div class="progress">
 						  <div class="progress-bar" role="progressbar" aria-valuenow="11" aria-valuemin="0" aria-valuemax="100" style="width: 11%;">
