--- a/Projekt cac khoa hoc lap trinh/user.html
+++ b/Projekt cac khoa hoc lap trinh/user.html
@@ -148,7 +148,7 @@
 				  <li role="presentation"><a href="#">Khóa học của tôi</a></li>
 				  <li role="presentation"><a href="#">Thông báo</a></li>
 				  <li role="presentation" class="active"><a href="#">Hồ sơ cá nhân</a></li>
-				  <li role="presentation"><a href="#">Lịch sử gia dịch</a></li>
+				  <li role="presentation"><a href="#">Lịch sử giao dịch</a></li>
 				</ul>
 
     		</div>
@@ -165,7 +165,7 @@
 						      	<div class="col-md-11">
 						      		<div style="margin-left: 20px;">
 								      <button type="button" id="myButton" data-loading-text="Loading..." class="btn btn-primary" autocomplete="off">
-										  Tải ảnh lên
+										  Tải ảnh
 									  </button>
 									  <br>									  									  
 									  <div style="margin-top: 10px;">
