--- a/Projekt cac khoa hoc lap trinh/user.html
+++ b/Projekt cac khoa hoc lap trinh/user.html
@@ -190,7 +190,7 @@
 										  </button>
 										  <br>									  									  
 										  <div style="margin-top: 10px;">
-										  	Bạn có thể tải ảnh lên hoặc lấy ảnh trong thư viện của chúng tôi ... <b>nhưng xấu thì bạn phải tự chịu</b>.
+										  	Bạn có thể tải ảnh lên hoặc lấy ảnh trong thư viện của chúng tôi ... <b>xấu thì bạn phải tự chịu</b>.
 										  </div>
 										</div>  
 									</div>  	
