--- a/Projekt cac khoa hoc lap trinh/trangchu01.html
+++ b/Projekt cac khoa hoc lap trinh/trangchu01.html
@@ -147,7 +147,7 @@
 					Đi học ở Techmaster<br>
 					Chỉ sau sáu tháng chẳng nhờ vả ai<br>
 					Có công việc làm dài dài<br>
-					Cùng nhau học nhé chớ hoài thời gian<br>				
+					Cùng nhau học nhé chớ phí hoài thời gian<br>				
 				</h4></p>		
 			</div>	
 		</div>    	
