--- a/Projekt cac khoa hoc lap trinh/c++.html
+++ b/Projekt cac khoa hoc lap trinh/c++.html
@@ -156,6 +156,7 @@
                     <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#hocngay1"><h3>ĐĂNG KÝ NGAY</h3><h5>Chỉ từ <span>500,000đ</span></h5></button>            
                 </div>
             </div>
+            
                 <!-- Modal -->
                 <div class="modal fade" id="hocngay1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                   <div class="modal-dialog" role="document">
@@ -186,6 +187,7 @@
                             <div class="modal-footer">                                                   
                               <!-- Button trigger modal -->
                               <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#thanhtoan1">Thanh toán gói 500,000đ</button>
+
                               <!-- Modal -->
                               <div class="modal fade" id="thanhtoan1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                                 <div class="modal-dialog" role="document">
@@ -222,14 +224,15 @@
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                      <button type="button" class="btn btn-default" data-dismiss="modal">Quay lại</button>
-                                      <button type="button" class="btn btn-primary">Xác nhận</button>
+                                      <a href="#chongoi"><button type="button" class="btn btn-default" data-dismiss="modal">Quay lại</button></a>
+                                      <a href="c++.html"><button type="button" class="btn btn-primary">Xác nhận</button></a>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                             </div>
                           </div>
+
                           <div role="tabpanel" class="tab-pane" id="thuchanhlab">
                             <br>
                             <ul style="list-style-type:square">
@@ -288,8 +291,8 @@
                                         </div>
                                     </div>
                                     <div class="modal-footer">
-                                      <button type="button" class="btn btn-default" data-dismiss="modal">Quay lại</button>
-                                      <button type="button" class="btn btn-primary">Xác nhận</button>
+                                      <a href="#chongoi"><button type="button" class="btn btn-default" data-dismiss="modal">Quay lại</button></a>
+                                      <a href="c++.html"><button type="button" class="btn btn-primary">Xác nhận</button></a>
                                     </div>
                                   </div>
                                 </div>
