--- a/Projekt cac khoa hoc lap trinh/user.html
+++ b/Projekt cac khoa hoc lap trinh/user.html
@@ -151,25 +151,21 @@
       	<br>				     	
     </header>
 
-    <section class="container"> 
-    	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">	
-			
-			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
-			  Khóa học của tôi
-			</button>
-
-			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="true" aria-controls="collapseExample1">
-			  Hồ sơ cá nhân
-			</button>
-
-			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
-			  Thông báo
-			</button>
-
-			<button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">
-			  Lịch sử giao dịch
-			</button>
-		</div>
+    <section class="container">
+	    	<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">			
+				<button class="btn btn-primary khoahoccuatoi" type="button" data-toggle="collapse" data-target="#collapseExample2" aria-expanded="false" aria-controls="collapseExample2">
+				  Khóa học của tôi
+				</button>
+				<button class="btn btn-primary khoahoccuatoi" type="button" data-toggle="collapse" data-target="#collapseExample1" aria-expanded="true" aria-controls="collapseExample1">
+				  Hồ sơ cá nhân
+				</button>
+				<button class="btn btn-primary khoahoccuatoi" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample3">
+				  Thông báo
+				</button>
+				<button class="btn btn-primary khoahoccuatoi" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample4">
+				  Lịch sử giao dịch
+				</button>
+			</div>
 
 		<div class="collapse" id="collapseExample2">
 		  <div class="well">		  
