--- a/Projekt cac khoa hoc lap trinh/bangxephang.html
+++ b/Projekt cac khoa hoc lap trinh/bangxephang.html
@@ -145,7 +145,7 @@
 					<TH class="XP">XP<br></TH>
 				</TR>
 				<TR>
-					<TD class="TT"><img src="img/vodich.jpg"></TD>
+					<TD class="TT"><img style="margin-right: 10px"; src="img/vodich.jpg"> <img src="img/images.png" width="30px" height="30px"></TD>
 					<TD><b>Trình Mạnh Cương</b></TD>									
 					<TD>
 						<div class="progress">
