--- a/Projekt cac khoa hoc lap trinh/codefree.html
+++ b/Projekt cac khoa hoc lap trinh/codefree.html
@@ -148,6 +148,16 @@
         </header> 
 
         <section class="container">
+
+          <div>
+            <br>
+            <!-- 16:9 aspect ratio -->
+            <div class="embed-responsive embed-responsive-16by9"> 
+              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y64Mw2Lyt0k" allowfullscreen="" width="1000" height="500"></iframe> 
+            </div>
+            <br>
+          </div>  
+            
           <div class="row">
             <div class="col-md-6">
               <div>
