--- a/Projekt cac khoa hoc lap trinh/user.html
+++ b/Projekt cac khoa hoc lap trinh/user.html
@@ -176,7 +176,7 @@
 		  	<br>
 
 		  	<div class="col-xs-6 col-md-3 hieuung zoom-effect-container">
-				<a href="c++.html">
+				<a href="hocc++.html">
 					<div class="maunenk">						
 						<img src="img/CPP.jpg" alt="anh1" title="anh1" width="360" height="250" class="img-responsive"/>									
 						<div class="khung"> 		
