--- a/Projekt cac khoa hoc lap trinh/hocc++.html
+++ b/Projekt cac khoa hoc lap trinh/hocc++.html
@@ -157,13 +157,13 @@
               </div>
               <br>
               <div style="text-align: center">
-                <button style="text-align: center" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Luyện tập Quiz</button>       
+                <button style="text-align: center" type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleQuiz" data-whatever="@getbootstrap">Luyện tập Quiz</button>       
               </div>  
               <br>
 
 
 
-              <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
+              <div class="modal fade" id="exampleQuiz" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
                 <div class="modal-dialog" role="document">
                   <div class="modal-content">
                     <div class="modal-header">
@@ -205,11 +205,8 @@
                 <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
                   <span class="sr-only">60% Complete</span>
                 </div>
-              </div>
-
+              </div>         
               
-              
-
 
 
             </div>  
