--- a/KanbanL /index.html
+++ b/KanbanL /index.html
@@ -27,7 +27,7 @@
 	  				<div class="card tieude">
 	  					<h5 class="chu" >TODO (4)</h5>
   					  	<div class="collection sorted-list">
-				    	    <a href="#!" class="collection-item">Alvin</a>
+				    	    <a href="#!" class="collection-item">Alvin <span class="glyphicons glyphicons-beach-umbrella"> die</span> </a>
 					        <a href="#!" class="collection-item active">Alvin</a>
 					        <a href="#!" class="collection-item">Alvin</a>
 					        <a href="#!" class="collection-item">Alvin</a>
